Write Swagger api Doc for some routes
